fix invisible tag selector border

--- a/app/assets/stylesheets/application.bootstrap.scss
+++ b/app/assets/stylesheets/application.bootstrap.scss
@@ -23,9 +23,6 @@ $ra-font-path: "https://cdn.jsdelivr.net/npm/rpg-awesome@0.2.0/fonts";
 .selectize-control {
 	padding: 1px;
 }
-.selectize-input {
-	border: none;
-}
 
 p.alert:empty, p.notice:empty {
 	display: none;
